# binary_clock

./: Cargo.toml  README.md  justfile
i18n/en/: example.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  i18n.rs
